--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+[dependencies.ntex]
+version = "2.12.4"
+default-features = false
+features = ["tokio"]
+
+[dependencies.tokio]
+version = "1.44.2"
+default-features = false
+features = ["rt-multi-thread", "macros"]
