--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ version = "2.13.2"
 default-features = false
 features = ["tokio"]
 
-[dependencies.tokio]
-version = "1.44.2"
-default-features = false
-features = ["rt-multi-thread", "macros"]
+[dependencies.sqlx]
+version = "0.8.5"
+features = ["postgres", "runtime-tokio", "uuid"]
