一点小小的代码。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2024"
 
 [dependencies]
 
+[dependencies.serde]
+version = "1.0.219"
+features = ["derive"]
+
 [dependencies.config]
 version = "0.15.11"
 default-features = false
